Keep automake from mucking up builds. After it runs, it invokes configure with incorrect args, inexplicably causing a rather annoying error. This is a hack.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ deps/libressl-2.0.0/config.status
 deps/libressl-2.0.0/Makefile
 deps/libressl-2.0.0/*/Makefile
 deps/libressl-2.0.0/*/*/Makefile
+deps/libressl-2.0.0/am--refresh
