--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ git = "https://github.com/DiamondLovesYou/rust-http.git"
 
 [dependencies.openssl]
 git = "https://github.com/DiamondLovesYou/rust-openssl.git"
-rev = "7dbe0d4d49adf2b646912a32813933b2eb7c855e"
+branch = "nacl-crosses"
 
 [build-dependencies.pnacl-build-helper]
 version = "*"
