--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,18 +7,23 @@ build = "src/build.rs"
 description = "Rust idiomatic bindings to parts of the Pepper API"
 repository = "https://github.com/DiamondLovesYou/rust-ppapi.git"
 documentation = "http://diamondlovesyou.github.io/rust-ppapi/docs/ppapi/index.html"
-license = "LGPL-3.0"
+license = "LGPL-3"
 
 [lib]
 name = "ppapi"
 path = "src/lib/lib.rs"
 
+[features]
+use-openssl = ["openssl", "http/ssl"]
+
 [dependencies.http]
 git = "https://github.com/DiamondLovesYou/rust-http.git"
+default-features = false
 
 [dependencies.openssl]
 git = "https://github.com/DiamondLovesYou/rust-openssl.git"
 branch = "nacl-crosses"
+optional = true
 
 [build-dependencies.pnacl-build-helper]
 version = "*"
