--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ name = "ppapi"
 path = "src/lib/lib.rs"
 
 [features]
-use-openssl = ["openssl", "http/ssl"]
+use-openssl = ["openssl", "old-http/ssl"]
 
 [dependencies.old-http]
 git = "https://github.com/DiamondLovesYou/rust-http.git"
