--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ build = "src/build.rs"
 description = "Rust idiomatic bindings to parts of the Pepper API"
 repository = "https://github.com/DiamondLovesYou/rust-ppapi.git"
 documentation = "http://diamondlovesyou.github.io/rust-ppapi/docs/ppapi/index.html"
-license = "LGPL-3"
+license = "MPL 2.0"
 
 [lib]
 name = "ppapi"
