--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,24 +8,22 @@ description = "Rust idiomatic bindings to parts of the Pepper API"
 repository = "https://github.com/DiamondLovesYou/rust-ppapi.git"
 documentation = "http://diamondlovesyou.github.io/rust-ppapi/docs/ppapi/index.html"
 license = "MPL-2.0"
+readme = "README.md"
 
 [lib]
 name = "ppapi"
 path = "src/lib/lib.rs"
 doc = true
 
-[features]
-use-openssl = ["openssl"]
-
 [dependencies.hyper]
 git = "https://github.com/DiamondLovesYou/hyper.git"
 branch = "lint-fixes"
+
 [dependencies.log]
 version = "*"
 
 [dependencies.openssl]
 version = "*"
-optional = true
 
 [build-dependencies.pnacl-build-helper]
 version = "*"
